# rmagine_gazebo_plugins

./: CMakeLists.txt  LICENSE  README.md  model_loading_test.md  package.xml
hooks/: rmagine_gazebo_plugins.dsv.in  rmagine_gazebo_plugins.sh.in
include/gazebo_rmagine_plugin/: WorldPrivate.h  gazebo_rmagine_map_plugin.h  gazebo_rmagine_spherical_plugin.h
include/rmagine_gazebo_plugins/: rmagine_embree_map_gzplugin.h  rmagine_embree_ros_gzplugin.h  rmagine_embree_spherical_gzplugin.h  rmagine_optix_map_gzplugin.h  rmagine_optix_ros_gzplugin.h  rmagine_optix_spherical_gzplugin.h
include/rmagine_gazebo_plugins/helper/: SceneDiff.hpp  SceneState.hpp  conversions.h  embree_conversions.h  helper_functions.h  optix_conversions.h
launch/: example.launch  example.launch.xml  rotating_scanner.launch  rotating_scanner.launch.xml
src/: gazebo_rmagine_map_plugin.cpp  gazebo_rmagine_spherical_plugin.cpp  gazebo_rmagine_spherical_register.cpp  rmagine_embree_map_gzplugin.cpp  rmagine_embree_ros_gzplugin.cpp  rmagine_embree_spherical_gzplugin.cpp  rmagine_embree_spherical_gzregister.cpp  rmagine_optix_map_gzplugin.cpp  rmagine_optix_ros_gzplugin.cpp  rmagine_optix_spherical_gzplugin.cpp  rmagine_optix_spherical_gzregister.cpp
src/helper/: SceneDiff.cpp  SceneState.cpp  conversions.cpp  embree_conversions.cpp  helper_functions.cpp  optix_conversions.cpp
urdf/: rmagine_vs_gazebo.urdf.xacro  robot_rotating_embree.urdf.xacro  robot_rotating_optix.urdf.xacro  robot_sensor_embree.urdf.xacro  robot_sensor_optix.urdf.xacro
worlds/: box_wall.world  forrest.world  heightmap.world  test.world
